--- a/requirements.txt
+++ b/requirements.txt
@@ -21,10 +21,11 @@ pypdf
 markdown
 xmltodict
 chromadb
+tokenizers
 embedchain
 beautifulsoup4
 readability-lxml
 youtube-search-python
 google-api-python-client
-chromadb
+
 
