--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 crewai
 crewai_tools
-
+SQLAlchemy
 composio-crewai
 streamlit
 langchain
@@ -28,7 +28,7 @@ beautifulsoup4
 readability-lxml
 youtube-search-python
 google-api-python-client
-
+pysqlite3-binary
 crewai[tools]
 
 
